# doppel

./: .gitignore  README.md  add_subtitles.py  agent.ipynb  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: code-standards.mdc
a2a/: pyproject.toml
agents/: pyproject.toml
agents/content_strategist/: main.py
agents/content_strategist/ai/: agent.py  agent_executor.py
agents/content_strategist/common/: config.py  constants.py  logger.py
agents/script_generator/: main.py
agents/script_generator/ai/: agent.py  agent_executor.py  utils.py
agents/script_generator/ai/tools/: tavily.py
agents/script_generator/common/utils/: exception_handlers.py  routes.py
archive/backend/: pyproject.toml
archive/backend/src/: main.py  seed.py
archive/backend/src/common/: config.py  constants.py
archive/backend/src/common/utils/: exception_handlers.py
archive/backend/src/core/agents/: __init__.py  candidate_agent.py  orchestrator.py  recruiter_agent.py
archive/backend/src/core/ai/: image_gen.py  reels_agent.py
archive/backend/src/database/mongodb/: mongodb_client.py
archive/backend/src/downstream/elevenlabs/: client.py
archive/backend/src/module/agent/: agent_controller.py  agent_schema.py  agent_service.py
archive/backend/src/module/conversation/: conversation_controller.py  conversation_dependency.py  conversation_schema.py  conversation_service.py
archive/backend/src/module/world/: world_controller.py  world_dependency.py  world_schema.py  world_service.py
assemblyai/: test.py
backend/: pyproject.toml
backend/src/: main.py
backend/src/common/: config.py  constants.py  logger.py
backend/src/database/: db_dependency.py
backend/src/database/gcs/: client.py
backend/src/database/mongodb/: mongodb_client.py
backend/src/module/agent/: agent_controller.py  agent_dependency.py  agent_schema.py  agent_service.py
backend/src/module/audio/: audio_controller.py  audio_dependency.py  audio_schema.py  audio_service.py
backend/src/module/reel/controller/: reel_controller.py
docs/: gcp-bucket.md  testing.md
elevenlabs/: clone.py  test.py
experiments/: agent.py  multi-agent-orchestration-advanced.ipynb  multi-agent-orchestration.ipynb  profiles.py  pyproject.toml  test.py
fal/: test.py
game-ui/: eslint.config.js  index.html  package.json
multi-agent/: main.py  pyproject.toml
ui/: .prettierignore  index.html  package.json  pnpm-lock.yaml
(+37 files in other folders)
