[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.22",
    "colorama>=0.4.6",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.5.0",
    "uvicorn>=0.40.0",
]
