[project]
name = "viralens-backend-service"
version = "0.1.0"
description = "Viralens Backend Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.1",
    "fastapi[standard]>=0.116.1",
    "colorama>=0.4.6",
    "httpx>=0.25.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
]
